--- a/fundraiser-details.html
+++ b/fundraiser-details.html
@@ -35,7 +35,7 @@
                 `;
                 detailsDiv.innerHTML = details;
             })
-            .catch(err => {
+            .catch(error => {
                 console.error('Error fetching fundraiser details:', err);
                 document.getElementById('fundraiser-details').innerHTML = '<p>Error loading fundraiser details</p>';
             });
